# mini-farm

./: .dockerignore  .env.sample  LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: main.yaml
backend/: Dockerfile  README.md  logging_config.yaml  pyproject.toml
backend/src/: config.py  database.py  dependencies.py  lifecycle.py  logger.py  main.py  middleware.py
backend/src/auth/: routers.py  security.py  utils.py
backend/src/crud/: todo_crud.py  user_crud.py
backend/src/models/: todo_models.py  user_models.py
backend/src/routers/: healthcheck_router.py  todo_router.py  users_router.py
backend/src/schemas/: healthcheck_schemas.py  todo_schemas.py
backend/src/tests/: test_main.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.jsx  api.js  main.jsx  setupTests.jsx
frontend/src/__tests__/: App.test.jsx
frontend/src/components/: NavBar.jsx
frontend/src/components/auth/: Login.jsx  ProtectedRoute.jsx  Register.jsx
frontend/src/components/todo/: Dashboard.jsx  ListTodoLists.jsx  ToDoList.jsx  TodoListsSummary.jsx
frontend/src/components/user/: UserProfile.jsx
frontend/src/contexts/: AuthContext.jsx  ToDoContext.jsx  useToDo.jsx
frontend/src/styles/: App.css  NavBar.css  ToDoList.css  ToDoListsSummary.css  UserProfile.css
nginx/: nginx.conf
