[project]
name = "backend"
version = "0.1.0"
description = "This is the backend of the repository of the mini-farm app. The dependencies are managed by uv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiostream>=0.6.4",
    "beanie>=1.29.0",
    "fastapi[all]>=0.115.7",
    "motor[srv]>=3.6.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
