[project]
name = "backend"
version = "0.1.0"
description = "This is the backend of the repository of the mini-farm app. The dependencies are managed by uv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiostream>=0.6.4",
    "beanie>=1.29.0",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "motor[srv]>=3.6.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-core>=2.29.0",
    "pydantic[email]>=1.10.21",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
